06aws-vpc-ec2-nginx_PROJECT/security_sg.tf
resource "aws_security_group" "nginx-web-sg" {
  vpc_id = aws_vpc.my-vpc.id

  #Inbound
  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]

  }
   ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]

  }

  #outbound
  egress  {
    from_port = 0
    to_port   = 0
    protocol  = "-1"
    cidr_blocks = ["0.0.0.0/0"]


  }

  tags = {
    Name = "nginx-web-sg"
  }

}
